Add swagger annotation on product handler and fix minor spelling mistake
